<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    tools:context="com.showbuddy4.fragment.Fragment_User_Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:background="@android:color/white"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/iv_profile_photo"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_profile_photo"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Name"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_college_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_profile_name"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lin"
                android:layout_below="@+id/tv_college_name"
                android:layout_marginTop="15dp"
                android:background="@color/gray_a9"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:orientation="vertical">


                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/cardview_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dime5dp"
                        android:backgroundTint="@color/white"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_profile_settings"
                        app:borderWidth="0dp"
                        app:fabSize="auto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/settings"
                        android:textAllCaps="true" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="1px"
                    android:layout_marginStart="1px"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/cardview_edit_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dime5dp"
                        android:backgroundTint="@color/white"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_profile_edit"
                        app:borderWidth="0dp"
                        app:fabSize="auto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/edit_info"
                        android:textAllCaps="true" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dime10dp"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginRight="-5dp"
            android:padding="@dimen/dime5dp"
            android:layout_marginTop="@dimen/dime3dp"
            android:background="@drawable/pro_devider"/>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:adjustViewBounds="false"
                    android:src="@drawable/premi"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/myshowbuddy_plus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/my_showbuddy_plus"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_red_dark"/>
            </LinearLayout>
            <TextView

                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxHeight="60dp"
                android:layout_gravity="bottom|center"
                android:gravity="center"
                   android:drawableTop="@drawable/premi"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"

                android:text="@string/my_showbuddy_plus"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_red_dark" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>
